# RAG-Local-Enterprise-System

./: LICENSE  README.md  makefile  pyproject.toml  uv.toml
backend/: main.py
backend/api/: qa.py  upload.py
backend/core/: config.py
backend/schemas/: qa.py  upload.py
backend/services/: doc_index.py  llm.py  processing.py  vector_store.py
backend/utils/: logger.py
tests/: test_qa_api.py
